[project]
name = "medical-image-std"
version = "0.1.0
description = "A standardized Python frameword for medical image processing."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}

authors = [
    {name = "Hamza Gbada", email = "hamza.gbada@gmail.com"},
]

dependencies = [
    "pydicom>=2.4.4",
    "numpy>=1.26.4",
    "Pillow>=10.3.0",
    "requests>=2.28.1",
    "matplotlib",
    "scipy",
    "scikit-image",
    "torch",
    "torchvision",
    "transformers",
    "pandas",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["medical_image"]

# ---------------------
# uv configuration
# ---------------------
# This is the CORRECT syntax
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

